add shard selector for point update operations
